--- a/web_manager/pom.xml
+++ b/web_manager/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>servlet-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.11</version>
+        </dependency>
     </dependencies>
 
     <build>
