高层：用户冻结功能实现完成

--- a/web_portal/src/main/webapp/WEB-INF/web.xml
+++ b/web_portal/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,9 @@
   <!-- Spring Security 权限配置 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring/spring-security.xml</param-value>
+    <param-value>classpath:spring/spring-security.xml
+      classpath:spring/springmvc.xml
+    </param-value>
   </context-param>
   <listener>
     <listener-class>
